[tool.poetry]
name = "sandbox_web_app"
version = "0.1.0"
description = ""
authors = ["Bostian, Ryan <rab0309@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
Cerberus = "^1.3.4"
python-dotenv = "^1.0.0"
Jinja2 = "^3.1.2"
asyncio = "^3.4.3"
uvicorn = "^0.21.1"
redis = "^4.5.4"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
